--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script: true
 
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: "jF7Qh4h3E8vBHYwX7CsEjg"
   file: "FILE TO UPLOAD"
   skip_cleanup: true
   on:
