--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
-cache:
-    apt: true
-    directories:
-        - node_modules # 缓存不经常更改的内容
+  # cache:
+  #     apt: true
+  #     directories:
+  #         - node_modules # 缓存不经常更改的内容
 
 install: 
   - npm install yarn -g
   - yarn
   - yarn run demo
-  - git commit -a
+  - git commit -m "Commit Message" -a
 
 script: true
 
