--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
-  # cache:
-  #     apt: true
-  #     directories:
-  #         - node_modules # 缓存不经常更改的内容
+node_js:
+  - "8"
+cache:
+    apt: true
+    directories:
+        - node_modules # 缓存不经常更改的内容
 
 install: 
   - npm install yarn -g
