--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - npm install yarn -g
   - yarn
   - yarn run demo
-  - git checkout -f master
+  - git add --all
   - git commit -m "Commit Message" -a
 
 script: true
