--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ install:
   - npm install
   - npm run demo
 
-script: 
-  - git add --all
-  - git commit -m "Commit Message from travis" -a
-  - git push --all
+# script: 
+#   - git add --all
+#   - git commit -m "Commit Message from travis" -a
+#   - git push --all
 
 deploy:
   provider: releases
