--- a/.travis.yml
+++ b/.travis.yml
@@ -16,19 +16,12 @@ script:
   
 # - git push --all
 
-# deploy:
-#   provider: releases
-#   api_key: ${GITHUB_TOKEN}
-#   file_glob: true
-#   file: "./src/**"
-#   skip_cleanup: true
-#   on:
-#     tags: true
-#     branch: master
-
 deploy:
-  provider: pages
+  provider: releases
+  api_key: ${GITHUB_TOKEN}
+  file_glob: true
+  file: "./src/**"
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
+    tags: true
     branch: master
