--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ script:
 deploy:
   provider: releases
   api_key: ${GITHUB_TOKEN}
-  file_glob: true
   skip_cleanup: true
+  draft: true
   on:
     tags: true
     branch: master
