--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,10 @@ after_script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: ${GITHUB_TOKEN}  # Set in the settings page of your repository, as a secure variable
   keep_history: true
+  file_glob: true
+  file: 
+    src/*
+    src/** 
   on:
     branch: master
