--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "fs-extra": "^8.1.0"
   },
   "dependencies": {
-    "loadsh": "^0.0.4"
+    "@types/shelljs": "^0.8.5",
+    "loadsh": "^0.0.4",
+    "shelljs": "^0.8.3"
   },
   "scripts": {
     "demo": "node src/index.js"
