--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ cache:
         - node_modules # 缓存不经常更改的内容
 
 install: 
-  - npm install
+  - yarn
 
 script:
-  - npm run demo
+  - yarn run demo
 
 deploy:
   provider: pages
