--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,21 @@
     "baseUrl": ".",
     "module": "commonjs",
     "target": "es5",
-    "typeRoots": ["types", "node_modules/@types"]
+    "typeRoots": [
+      "types",
+      "node_modules/@types"
+    ]
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "include": [
+    "config-ts",
+    "gulp-ts",
+    "util",
+    "src",
+    "gulpfile.ts",
+    "demo.ts"
+  ],
+  "exclude": [
+    "__build__",
+    "node_modules"
+  ]
 }
