--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/gulp-rename": "^0.0.33",
     "@types/gulp-replace": "^0.0.31",
     "@types/merge-stream": "^1.1.2",
+    "@types/nunjucks": "^3.1.2",
     "@types/shelljs": "^0.8.5",
+    "@types/vinyl-buffer": "^1.0.0",
     "cross-env": "^6.0.3",
     "execa": "^3.2.0",
     "globby": "^10.0.1",
@@ -27,6 +29,7 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
+    "gulp-exec": "^4.0.0",
     "gulp-imagemin": "^6.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
@@ -34,18 +37,16 @@
     "loadsh": "^0.0.4",
     "merge-stream": "^2.0.0",
     "moment": "^2.24.0",
+    "nunjucks": "^3.2.0",
     "prettier": "^1.18.2",
     "shelljs": "^0.8.3",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^5.20.0",
-    "@types/nunjucks": "^3.1.2",
-    "nunjucks": "^3.2.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.4",
-    "@types/vinyl-buffer": "^1.0.0",
     "vinyl-buffer": "^1.0.1"
   },
   "prettier": {
